[project]
name = "knx-nats-bridge"
version = "0.2.0"
description = "Bridge KNX telegrams to NATS JetStream with DPT decoding"
readme = "README.md"
license = "GPL-2.0-or-later"
requires-python = ">=3.14.4"
authors = [
    { name = "Alexander Zimmermann" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Home Automation",
]
dependencies = [
    "xknx>=3.15.0",
    "nats-py[nkeys]>=2.14.0",
    "prometheus-client>=0.25.0",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "pyyaml>=6.0.3",
    "jsonschema>=4.26.0",
]

[project.optional-dependencies]
tools = [
    "xknxproject>=3.8.2",
]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
    "mypy>=1.20.2",
    "pre-commit>=4.6.0",
    "types-PyYAML",
    "types-jsonschema",
]

[project.scripts]
knx-nats-bridge = "knx_nats_bridge.main:run"
knxproj-to-yaml = "knx_nats_bridge.tools.knxproj_to_yaml:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/knx_nats_bridge"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "RET", "SIM", "ARG"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
